--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -9,6 +9,14 @@
 <p class="mb-3 f4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">
   {{ user.bio }}
 </p>
+<p align="justify" class="mb-3 f4 {% if site.style == 'dark' %}text-white{% else %}text-gray{% endif %}">
+  Advising clients on appropriate DevOps strategies specific to their unique business needs.
+  Creating and managing the roadmap and implementation of DevOps within our clients organisations.
+  Propose DevOps technology solutions and take the lead in implementing and evaluating those solutions.
+  Supervise and deliver architecture design, infrastructure design, build and deployment activities.
+  Delivering high level designs using industry standard methodologies (UML process flow/sequence diagrams etc) to articulate complex tasks to business and technical teams.
+  Working effectively with 3rd party and offshore development teams.
+</p>
 
 {% if include.metadata %}
   <div class="f4 mb-6">
